[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/Workbench-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menu/save/save_ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/game.gd" type="Script" id=3]
[ext_resource path="res://fonts/Jura-Light.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://agent.tscn" type="PackedScene" id=5]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.184314, 0.0745098, 0.0745098, 0.168627 )

[sub_resource type="DynamicFont" id=10]
size = 40
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 60
use_filter = true
font_data = ExtResource( 4 )

[node name="Game" type="Node2D" groups=["level"]]
script = ExtResource( 3 )
Agent = ExtResource( 5 )

[node name="Agents" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Pause" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1880.0
margin_bottom = -1040.0

[node name="PausePanel" type="Panel" parent="UI/Pause"]
anchor_right = 48.0
anchor_bottom = 27.0
margin_right = -0.00012207
margin_bottom = -0.00012207
custom_styles/panel = SubResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Pause"]
anchor_right = 47.94
anchor_bottom = 26.773
margin_left = 805.0
margin_top = 400.0
margin_right = -741.6
margin_bottom = -455.92
custom_constants/separation = 9

[node name="PauseMessage" type="Label" parent="UI/Pause/VBoxContainer"]
margin_right = 371.0
margin_bottom = 40.0
theme_type_variation = "Title"
custom_colors/font_color = Color( 0.564706, 0.658824, 0.219608, 1 )
custom_fonts/font = SubResource( 10 )
text = "Pause"
align = 1
valign = 1

[node name="PressSpace" type="Label" parent="UI/Pause/VBoxContainer"]
margin_top = 49.0
margin_right = 371.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0.564706, 0.658824, 0.219608, 1 )
custom_fonts/font = SubResource( 11 )
text = "Press space to start"
align = 1
valign = 1

[node name="Resume" type="Button" parent="UI/Pause/VBoxContainer"]
margin_top = 79.0
margin_right = 371.0
margin_bottom = 99.0
text = "Resume"

[node name="MainMenu" type="Button" parent="UI/Pause/VBoxContainer"]
margin_top = 108.0
margin_right = 371.0
margin_bottom = 128.0
text = "Main Menu"

[node name="Restart" type="Button" parent="UI/Pause/VBoxContainer"]
margin_top = 137.0
margin_right = 371.0
margin_bottom = 157.0
text = "Restart"

[node name="SaveBestAgent" type="Button" parent="UI/Pause/VBoxContainer"]
margin_top = 166.0
margin_right = 371.0
margin_bottom = 186.0
custom_colors/font_color_disabled = Color( 0.129412, 0.0392157, 0.0392157, 1 )
disabled = true
text = "Save Best Agent"

[node name="Quit" type="Button" parent="UI/Pause/VBoxContainer"]
margin_top = 195.0
margin_right = 371.0
margin_bottom = 215.0
text = "Quit"

[node name="Solved" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="SolvedText" type="Label" parent="UI/Solved"]
visible = false
margin_left = 902.0
margin_top = 100.0
margin_right = 1095.0
margin_bottom = 172.0
custom_fonts/font = SubResource( 12 )
text = "Solved"

[node name="SaveUI" parent="UI" instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="UI/Pause/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="UI/Pause/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="UI/Pause/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="UI/Pause/VBoxContainer/SaveBestAgent" to="." method="_on_Save_Best_Agent_pressed"]
[connection signal="pressed" from="UI/Pause/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="text_entered" from="UI/SaveUI/VBoxContainer/Filename" to="." method="_on_Filename_text_entered"]

[editable path="UI/SaveUI"]
